deploy/s3/target/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: s3-certification
  labels:
    kubernetes.io/metadata.name: s3-certification
    s3.hvac/command-target: "true"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
