deploy/s3/target/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: command-service
  namespace: s3-certification
  labels:
    app: command-service
spec:
  type: ClusterIP
  selector:
    app: command-service
  ports:
    - name: https
      port: 8447
      targetPort: https
    - name: diagnostics
      port: 19087
      targetPort: diagnostics
